<resources>
    <string name="app_name">Ceryl</string>
    <string name="Open">open</string>
    <string name="Close">close</string>
    <string name="facebook_app_id">390142861663637</string>
    <string name="fb_login_protocol_scheme">fb390142861663637</string>
    <string name="sign_up"><u> Sign up</u></string>
    <string name="email">Email</string>
    <string name="first_name">First Name</string>
    <string name="last_name">Last Name</string>
    <string name="phone">Phone</string>
    <string name="birthday">Birthday</string>
    <string name="address1">Address1</string>
    <string name="address2">Address2</string>
    <string name="pincode">Zip Code</string>
    <string name="password">Password</string>
    <string name="hello_there">Hello there,</string>
    <string name="welcome_back">Welcome back</string>
    <string name="login">Login</string>
    <string name="logout">Logout</string>
    <string name="back">Back</string>
    <string name="update">Update</string>
    <string name="delete">Delete</string>
    <string name="profile">Profile</string>
    <string name="Home">Home</string>
    <string name="start">Let\'s Start</string>
    <string name="landing">Landing</string>
    <string name="edit">Edit</string>
    <string name="don_t_have_account">Don\'t have account ? </string>
    <string name="forgot_password">Forgot Password?</string>
    <string name="forgot_your_password"><u>Forgot your Password ?</u></string>
    <string name="new_password">New Password</string>
    <string name="passwordhint">*****</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="continuee">continue</string>
    <string name="no_internet_connection">No Internet Connection!</string>
    <string name="forgot_message">We just need your registered email address to send you password reset.</string>


    <string-array name="country">
        <item>India</item>
        <item>Australia</item>
        <item>Canada</item>
        <item>China</item>
        <item>Pakistan</item>
    </string-array>

    <string-array name="indian_states">
        <item>Please select state</item>
        <item>Andaman and Nicobar Islands</item>
        <item>Andhra Pradesh</item>
        <item>Arunachal Pradesh</item>
        <item>Assam</item>
        <item>Bihar</item>
        <item>Chandigarh</item>
        <item>Chhattisgarh</item>
        <item>Dadra and Nagar Haveli</item>
        <item>Daman and Diu</item>
        <item>Delhi</item>
        <item>Goa</item>
        <item>Gujarat</item>
        <item>Haryana</item>
        <item>Himachal Pradesh</item>
        <item>Jammu and Kashmir</item>
        <item>Jharkhand</item>
        <item>Karnataka</item>
        <item>Kerala</item>
        <item>Lakshadweep</item>
        <item>Madhya Pradesh</item>
        <item>Maharashtra</item>
        <item>Manipur</item>
        <item>Meghalaya</item>
        <item>Mizoram</item>
        <item>Nagaland</item>
        <item>Orissa</item>
        <item>Pondicherry</item>
        <item>Punjab</item>
        <item>Rajasthan</item>
        <item>Sikkim</item>
        <item>Tamil Nadu</item>
        <item>Telangana</item>
        <item>Tripura</item>
        <item>Uttaranchal</item>
        <item>Uttar Pradesh</item>
        <item>West Bengal</item>
    </string-array>

</resources>
