<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlLoginParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/hello_there"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/welcome_back"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <EditText
            android:id="@+id/etEmail"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/email"
            android:textColor="@color/white"
            android:inputType="textEmailAddress"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:layout_marginTop="30dp"/>

        <EditText
            android:id="@+id/etPassword"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:hint="@string/password"
            android:textColor="@color/white"
            android:layout_marginTop="10dp"
            android:imeOptions="actionDone"
            android:textColorHint="@color/white"
            android:backgroundTint="@color/white"
            android:inputType="textPassword"/>

        <TextView
            android:id="@+id/tvForgotPassword"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/forgot_your_password"
            android:textColor="@color/white"
            android:textStyle="bold"
            android:textAlignment="center"/>

        <RelativeLayout
            android:id="@+id/rlLogin"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/login"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textSize="15sp"/>

        </RelativeLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_marginTop="20dp"
            android:layout_gravity="center">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/don_t_have_account"
                android:textColor="@color/white"/>

            <TextView
                android:id="@+id/tvSignup"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:textColor="@color/white"
                android:text="@string/sign_up"
                android:textStyle="bold"/>

        </LinearLayout>

    </LinearLayout>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:loading_speed="11"
        app:loading_width="5dp" />

</RelativeLayout>