<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/rlNewPasswordParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:paddingLeft="50dp"
    android:paddingRight="50dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="70dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/new_password"
            android:textAlignment="center"
            android:textStyle="bold"
            android:textColor="@color/white"
            android:textSize="30sp"/>

        <TextView
            android:id="@+id/tvUserEmail"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:layout_marginTop="30dp"
            android:textAlignment="center"/>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="15dp">

            <EditText
                android:id="@+id/etNewPassword"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:hint="@string/new_password"
                android:textColor="@color/white"
                android:inputType="textPassword"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white" />

            <ImageView
                android:id="@+id/ivShow"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_show"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:layout_marginTop="10dp">

            <EditText
                android:id="@+id/etConfirmPassword"
                android:layout_width="match_parent"
                android:layout_height="45dp"
                android:hint="@string/confirm_password"
                android:textColor="@color/white"
                android:imeOptions="actionDone"
                android:textColorHint="@color/white"
                android:backgroundTint="@color/white"
                android:inputType="textPassword"/>

            <ImageView
                android:id="@+id/ivConfPass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:src="@drawable/icon_show"
                android:layout_centerVertical="true"
                android:layout_alignParentEnd="true"/>

        </RelativeLayout>


        <RelativeLayout
            android:id="@+id/rlNewPassword"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:background="@drawable/btn_background">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/continuee"
                android:textAllCaps="true"
                android:layout_centerInParent="true"
                android:textColor="@color/black"
                android:textStyle="bold"
                android:layout_marginStart="25dp"
                android:layout_marginEnd="25dp"
                android:textSize="15sp"/>

        </RelativeLayout>

    </LinearLayout>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:loading_speed="11"
        app:loading_width="5dp" />

</RelativeLayout>