<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/rlProfileParent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/black"
    android:paddingLeft="20dp"
    android:paddingRight="20dp">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_marginTop="20dp">

        <androidx.cardview.widget.CardView
            android:layout_width="100dp"
            android:layout_height="100dp"
            app:cardCornerRadius="50dp"
            android:layout_gravity="center">

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">

                <ImageView
                    android:id="@+id/ivProfile"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="centerCrop"/>

                <RelativeLayout
                    android:id="@+id/rlEditImage"
                    android:layout_width="match_parent"
                    android:layout_height="25dp"
                    android:background="#59000000"
                    android:layout_alignParentBottom="true">

                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="@string/edit"
                        android:textColor="@color/black"
                        android:textStyle="bold"
                        android:layout_centerInParent="true"/>

                </RelativeLayout>

            </RelativeLayout>

        </androidx.cardview.widget.CardView>

        <TextView
            android:id="@+id/etFullName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@color/white"
            android:backgroundTint="@color/white"
            android:maxLength="30"
            android:singleLine="true"
            android:textSize="18sp"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:layout_gravity="center"/>

        <LinearLayout
            android:id="@+id/llName"
            android:layout_width="match_parent"
            android:layout_height="45dp"
            android:weightSum="1"
            android:visibility="gone"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <View
                android:layout_weight="0.1"
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:background="@color/black"/>

            <LinearLayout
                android:layout_width="0dp"
                android:layout_height="match_parent"
                android:orientation="horizontal"
                android:layout_weight="0.9">

                <EditText
                    android:id="@+id/etFirstName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:hint="@string/first_name"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/white"
                    android:textCursorDrawable="@color/white"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="TextFields" />
                <View
                    android:layout_width="10dp"
                    android:layout_height="match_parent"
                    android:background="@color/black"/>

                <EditText
                    android:id="@+id/etLastName"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:layout_weight="0.45"
                    android:hint="@string/last_name"
                    android:textColor="@color/white"
                    android:maxLines="1"
                    android:textCursorDrawable="@color/white"
                    android:imeOptions="actionNext"
                    android:textColorHint="@color/white"
                    android:backgroundTint="@color/white"
                    android:inputType="text"
                    tools:ignore="TextFields" />


            </LinearLayout>

        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_email"/>

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etEmail"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:hint="@string/email"
                        android:textColor="@color/white"
                        android:maxLines="1"
                        android:imeOptions="actionDone"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="text"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        tools:ignore="TextFields" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_contact"/>

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etPhone"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:maxLength="10"
                        android:maxLines="1"
                        android:hint="@string/phone"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        android:textCursorDrawable="@color/white"
                        tools:ignore="TextFields" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_birthday"/>

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etBirthday"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:hint="@string/birthday"
                        android:maxLines="1"
                        android:clickable="false"
                        android:focusableInTouchMode="false"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_address"/>

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etAddress1"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:hint="@string/address1"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:textCursorDrawable="@color/white"
                        android:inputType="text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <LinearLayout
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_gravity="center"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:src="@drawable/icon_contact"
                            android:visibility="invisible"/>

                    </LinearLayout>


                    <EditText
                        android:id="@+id/etAddress2"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:hint="@string/address2"
                        android:maxLines="1"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:textCursorDrawable="@color/white"
                        android:inputType="text"/>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_pincode"/>

                    </RelativeLayout>


                    <EditText
                        android:id="@+id/etPin"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:hint="@string/pincode"
                        android:textColor="@color/white"
                        android:imeOptions="actionDone"
                        android:maxLines="1"
                        android:maxLength="6"
                        android:textColorHint="@color/white"
                        android:backgroundTint="@color/white"
                        android:inputType="number"
                        android:textCursorDrawable="@color/white"
                        tools:ignore="TextFields" />

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:layout_width="wrap_content"
                        android:layout_height="match_parent"
                        android:layout_weight="0.1">

                        <ImageView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:layout_centerInParent="true"
                            android:src="@drawable/icon_state"/>

                    </RelativeLayout>

                    <LinearLayout
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.9"
                        android:background="@drawable/bg_solid_white">

                        <Spinner
                            android:id="@+id/spnrState"
                            android:layout_width="match_parent"
                            android:layout_height="45dp"
                            android:spinnerMode="dialog"
                            android:background="@null"
                            android:entries="@array/indian_states"/>


                    </LinearLayout>

                </LinearLayout>

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="horizontal"
                    android:layout_marginTop="30dp"
                    android:paddingStart="10dp"
                    android:paddingEnd="10dp"
                    android:weightSum="1">

                    <RelativeLayout
                        android:id="@+id/rlDelete"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/btn_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/delete"
                            android:textAllCaps="false"
                            android:layout_centerInParent="true"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginStart="40dp"
                            android:layout_marginEnd="40dp"
                            android:textSize="15sp"/>

                    </RelativeLayout>
                    <View
                        android:layout_width="10dp"
                        android:layout_height="match_parent"
                        android:background="@color/black"/>

                    <RelativeLayout

                        android:id="@+id/rlUpdate"
                        android:layout_width="0dp"
                        android:layout_height="45dp"
                        android:layout_weight="0.5"
                        android:layout_gravity="center_horizontal"
                        android:background="@drawable/btn_background">

                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="@string/update"
                            android:textAllCaps="false"
                            android:layout_centerInParent="true"
                            android:textColor="@color/black"
                            android:textStyle="bold"
                            android:layout_marginStart="40dp"
                            android:layout_marginEnd="40dp"
                            android:textSize="15sp"/>

                    </RelativeLayout>

                </LinearLayout>

            </LinearLayout>
        </ScrollView>

    </LinearLayout>

    <com.victor.loading.rotate.RotateLoading
        android:id="@+id/rotateloading"
        android:layout_width="70dp"
        android:layout_height="70dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:layout_marginBottom="50dp"
        app:loading_speed="11"
        app:loading_width="5dp" />

</RelativeLayout>